<resources>
    <string name="app_name">CoolResume</string>
    <string name="krzysztof_swiat_y">Krzysztof Swiatły</string>
    <string name="work_history">Work history</string>
    <string name="call_me">Call me</string>
    <string name="email_me">Email me</string>
    <string name="my_pic">My_pic</string>
    <string name="you_have_made_it">You have made it</string>
    <string name="hej_samuel">Hej, Samuel</string>
    <string name="textview">TextView</string>
</resources>